--- a/Result_template.Rmd
+++ b/Result_template.Rmd
@@ -13,6 +13,8 @@ knitr::opts_chunk$set(warning = FALSE, message = FALSE)
 
 ## Material and methods
 
+### Subjects
+
 ```{r}
 analysis_data <- as.data.frame(analysis_data)
 describe(x = analysis_data[c("age",
@@ -31,23 +33,55 @@ describe(x = analysis_data[c("age",
   )
 ```
 
+### Parameters
+
+```{r}
+
+```
+
 ## Results
 
 ### Unsupervised learning
 
-```{r echo=FALSE, message=FALSE, warning=FALSE}
+#### K-means clustering
+
+```{r echo=FALSE, message=FALSE, warning=FALSE, results='asis'}
 kclust_coord %>% walk(print)
 rmd_plot("^kclust")
-rmd_plot("^hclust")
+confusion_list_export("^kclust")
+```
+
+#### Hierarchical bottom-up clustering
+
+```{r echo=FALSE, message=FALSE, warning=FALSE, results='asis'}
+rmd_plot("^hclust_bu")
+confusion_list_export("^hclust_bu")
+```
+
+#### Hierarchical top-down clustering
+
+```{r echo=FALSE, message=FALSE, warning=FALSE, results='asis'}
+rmd_plot("^hclust_td")
+confusion_list_export("^hclust_td")
+```
+
+#### DBSCAN clustering
+
+```{r echo=FALSE, message=FALSE, warning=FALSE, results='asis'}
 rmd_plot2("^dbscan")
+```
+
+#### OPTICS clustering
+```{r echo=FALSE, message=FALSE, warning=FALSE, results='asis'}
 rmd_plot2("^optics")
 ```
 
 ### Supervised learning
 
-```{r}
-lgbm_confusion$overall %>% print()
+#### LightGBM
 
+```{r echo=FALSE, message=FALSE, warning=FALSE, results='asis'}
+confusion_export("^lgbm")
 t(as.data.frame(lgbm_model$params[c(
   "boosting",
   "lambda_l1",
@@ -59,7 +93,6 @@ t(as.data.frame(lgbm_model$params[c(
   "bagging_freq",
   "learning_rate"
 )])) %>% my_table()
-lgbm_confusion
 lgbm_importance_plot %>%
   lgb.plot.importance()
 lgbm_importance_plot %>%
