--- a/Result_template.Rmd
+++ b/Result_template.Rmd
@@ -47,46 +47,47 @@ describe(x = analysis_data[c("age",
 #### K-means clustering
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, results='asis'}
+kclust_graph %>% walk(print)
 kclust_coord %>% walk(print)
-rmd_plot("^kclust")
+
 confusion_list_export("^kclust")
 ```
 
 #### Hierarchical bottom-up clustering
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, results='asis'}
-rmd_plot("^hclust_bu")
+hclust_bu_graph %>% walk(print)
 confusion_list_export("^hclust_bu")
 ```
 
 #### Hierarchical top-down clustering
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, results='asis'}
-rmd_plot("^hclust_td")
+hclust_td_graph %>% walk(print)
 confusion_list_export("^hclust_td")
 ```
 
-#### DBSCAN clustering
+<!-- #### DBSCAN clustering -->
 
-```{r echo=FALSE, message=FALSE, warning=FALSE, results='asis'}
-rmd_plot2("^dbscan")
-```
+<!-- ```{r echo=FALSE, message=FALSE, warning=FALSE, results='asis'} -->
+<!-- # rmd_plot2("^dbscan") -->
+<!-- ``` -->
 
-#### OPTICS clustering
-```{r echo=FALSE, message=FALSE, warning=FALSE, results='asis'}
-rmd_plot2("^optics")
-```
+<!-- #### OPTICS clustering -->
+<!-- ```{r echo=FALSE, message=FALSE, warning=FALSE, results='asis'} -->
+<!-- # rmd_plot2("^optics") -->
+<!-- ``` -->
 
 ### Supervised learning
 
 #### LightGBM
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, results='asis'}
-accuracy
-best_accuracy
-best_params
-conf_matrix
-t(as.data.frame(lgbm_model$params[c(
+accuracy_status
+best_accuracy_status
+best_params_status
+conf_matrix_status
+t(as.data.frame(lgbm_model_status$params[c(
   "boosting",
   "lambda_l1",
   "lambda_l2",
@@ -97,10 +98,32 @@ t(as.data.frame(lgbm_model$params[c(
   "bagging_freq",
   "learning_rate"
 )])) %>% my_table()
-lgbm_importance_plot %>%
+lgbm_importance_plot_status %>%
   lgb.plot.importance()
-lgbm_importance_plot %>%
+lgbm_importance_plot_status %>%
   lgb.plot.interpretation()
-lgbm_plot %>%
+lgbm_plot_status %>%
+  walk(print)
+
+accuracy_intensity
+best_accuracy_intensity
+best_params_intensity
+conf_matrix_intensity
+t(as.data.frame(lgbm_model_intensity$params[c(
+  "boosting",
+  "lambda_l1",
+  "lambda_l2",
+  "num_leaves",
+  "max_depth",
+  "feature_fraction",
+  "bagging_fraction",
+  "bagging_freq",
+  "learning_rate"
+)])) %>% my_table()
+lgbm_importance_plot_intensity %>%
+  lgb.plot.importance()
+lgbm_importance_plot_intensity %>%
+  lgb.plot.interpretation()
+lgbm_plot_intensity %>%
   walk(print)
 ```
