--- a/Result_template.Rmd
+++ b/Result_template.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 output: html_document
 ---
 
-```{r include=FALSE}
+```{r message=FALSE, warning=FALSE, include=FALSE}
 knitr::opts_chunk$set(warning = FALSE, message = FALSE)
 ```
 
@@ -20,9 +20,9 @@ analysis_data <- as.data.frame(analysis_data)
 describe(x = analysis_data[c("age",
                              "height",
                              "weight",
-                             "train_years",
+                             # "train_years",
                              "train_volume",
-                             "vo2_maximum")] , na.rm = T) %>%
+                             "vo2_max")] , na.rm = T) %>%
   round() %>%
   select(c("mean", "sd", "median", "min", "max")) %>%
   my_table(
@@ -34,49 +34,42 @@ describe(x = analysis_data[c("age",
   )
 ```
 
-### Parameters
-
-```{r}
-
-```
-
 ## Results
 
 ### Unsupervised learning
 
 #### K-means clustering
 
-```{r echo=FALSE, message=FALSE, warning=FALSE, results='asis'}
-kclust_graph %>% walk(print)
-kclust_coord %>% walk(print)
-
-confusion_list_export("^kclust")
+```{r}
+kclust_graph
+kclust_coord
+kclust_confusion
 ```
 
 #### Hierarchical bottom-up clustering
 
-```{r echo=FALSE, message=FALSE, warning=FALSE, results='asis'}
-hclust_bu_graph %>% walk(print)
-confusion_list_export("^hclust_bu")
+```{r}
+hclust_bu_graph
+hclust_bu_confusion
 ```
 
 #### Hierarchical top-down clustering
 
-```{r echo=FALSE, message=FALSE, warning=FALSE, results='asis'}
-hclust_td_graph %>% walk(print)
-confusion_list_export("^hclust_td")
+```{r}
+hclust_td_graph
+hclust_td_confusion
 ```
 
 ### Supervised learning
 
 #### LightGBM
 
-```{r echo=FALSE, message=FALSE, warning=FALSE, results='asis'}
-accuracy_status
-best_accuracy_status
-best_params_status
-conf_matrix_status
-t(as.data.frame(lgbm_model_status$params[c(
+```{r}
+lgbm_accuracy
+lgbm_best_accuracy
+lgbm_best_params
+lgbm_confusion
+t(as.data.frame(lgbm_model$params[c(
   "boosting",
   "lambda_l1",
   "lambda_l2",
@@ -87,32 +80,10 @@ t(as.data.frame(lgbm_model_status$params[c(
   "bagging_freq",
   "learning_rate"
 )])) %>% my_table()
-lgbm_importance_plot_status %>%
+lgbm_importance_plot %>%
   lgb.plot.importance()
-lgbm_importance_plot_status %>%
+lgbm_importance_plot %>%
   lgb.plot.interpretation()
-lgbm_plot_status %>%
-  walk(print)
-
-accuracy_intensity
-best_accuracy_intensity
-best_params_intensity
-conf_matrix_intensity
-t(as.data.frame(lgbm_model_intensity$params[c(
-  "boosting",
-  "lambda_l1",
-  "lambda_l2",
-  "num_leaves",
-  "max_depth",
-  "feature_fraction",
-  "bagging_fraction",
-  "bagging_freq",
-  "learning_rate"
-)])) %>% my_table()
-lgbm_importance_plot_intensity %>%
-  lgb.plot.importance()
-lgbm_importance_plot_intensity %>%
-  lgb.plot.interpretation()
-lgbm_plot_intensity %>%
+lgbm_plot %>%
   walk(print)
 ```
