--- a/EIH_Modeling_Classification.Rmd
+++ b/EIH_Modeling_Classification.Rmd
@@ -60,14 +60,11 @@ library(gbm)
 library(lightgbm)
 library(reticulate)
 library(shapviz)
-library(DiagrammeR)
 library(magrittr)
 library(gridExtra)
 library(psych)
 library(missRanger)
 library(fs)
-library(tcltk)
-library(fossil)
 library(tools)
 
 # Create a folder to save results
@@ -105,10 +102,16 @@ my_envs <- lapply(X = imported_data_names, FUN = \(df_name) {
 
 # Source scripts for analysis
 for (df_name in imported_data_names) {
+  antrop_data <- imported_data[[df_name]][, c("age",
+                                              "height",
+                                              "weight",
+                                              "train_years",
+                                              "train_volume",
+                                              "vo2_max")]
   analysis_data <- imported_data[[df_name]] %>%
     df_encode() %$%
     encoded_data %>%
-    clean_dataset() %>% 
+    clean_dataset() %>%
     round(digits = 4)
   compute_env <- my_envs[[df_name]]
   source("./Scripts/Unsupervised.R", local = compute_env)
